--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Solana Wars: Kill the Ghosts</title>
+	<title>Troll Troll</title>
 	<meta charset="UTF-8"/>
     	<link rel="manifest" href="manifest.webmanifest">
 
