--- a/index.html
+++ b/index.html
@@ -212,28 +212,30 @@
 
 </head>
 <body>
-	<div id="titreJeu">Solana Wars: Kill the Ghosts</div>
-	<div id="jeuContainer">
-    
-		<script>
-
-		(function() {
-			//Initialization
-			var game = new gdjs.RuntimeGame(gdjs.projectData, {});
-
-			//Create a renderer
-			game.getRenderer().createStandardCanvas(document.body);
-
-			//Bind keyboards/mouse/touch events
-			game.getRenderer().bindStandardEvents(game.getInputManager(), window, document);
-
-			//Load all assets and start the game
-			game.loadAllAssets(function() {
-				game.startGameLoop();
-			});
-		})();
-
-		</script>
+	<div id="titreEtJeuContainer">
+		<div id="titreJeu">Solana Wars: Kill the Ghosts</div>
+		<div id="jeuContainer">
+	    
+			<script>
+	
+			(function() {
+				//Initialization
+				var game = new gdjs.RuntimeGame(gdjs.projectData, {});
+	
+				//Create a renderer
+				game.getRenderer().createStandardCanvas(document.body);
+	
+				//Bind keyboards/mouse/touch events
+				game.getRenderer().bindStandardEvents(game.getInputManager(), window, document);
+	
+				//Load all assets and start the game
+				game.loadAllAssets(function() {
+					game.startGameLoop();
+				});
+			})();
+	
+			</script>
+		</div>
 	</div>
 	<script>
 		  // Fonction pour connecter le portefeuille Phantom
