--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <button id="connectWalletButton">Connecter le portefeuille Phantom</button>
 
 <head>
-	<title>Troll Troll</title>
+	<title>Solana Wars: Kill the ghosts</title>
 	<meta charset="UTF-8"/>
     	<link rel="manifest" href="manifest.webmanifest">
 
