--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 	<!-- Conteneur du jeu -->
     <div id="jeuContainer"></div>
 	<canvas id="gameCanvas"></canvas>
-  (/div)
+    </div>
     
 
     <!-- Bouton de connexion au portefeuille Phantom -->
