--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	/* Style pour le titre au-dessus de la fenêtre du jeu */
 		#titreJeu {
 		    font-size: 24px;
-		    color: white;
+		    color: black;
 		    padding: 10px;
 		    text-align: center;
 	}
