--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     
 	<!-- Conteneur du jeu -->
     <div id="jeuContainer"></div>
-	<canvas id="gameCanvas"></canvas>
+	<canvas id="gameCanvas" width="800" height="600"></canvas>
     </div>
     
 
