--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<style>
 	/* Style pour la fenêtre du jeu */
 		#jeuContainer {
-		    width: 1600px;
+		    width: 2000px;
 		    height: 1200px;
 		    margin: 20px auto; /* Centrer le conteneur */
 		    background-color: #000000;
@@ -220,7 +220,7 @@
     
 	<!-- Conteneur du jeu -->
     <div id="jeuContainer"></div>
-	<canvas id="gameCanvas" width="800" height="600"></canvas>
+	<canvas id="gameCanvas"></canvas>
     </div>
     
 
