--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		#jeuContainer {
 		    width: 2000px;
 		    height: 1200px;
-		    margin: 20px auto; /* Centrer le conteneur */
+		    /*margin: 20px auto; /* Centrer le conteneur */
 		    background-color: #000000;
 		    overflow: hidden;
 		    position: relative;
