--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		    /*margin: 20px auto; /* Centrer le conteneur */
 		    background-color: #000000;
 		    overflow: hidden;
-		    position: relative;
+		    /*position: relative;*/
 	}
 	
 	/* Style pour le titre au-dessus de la fenêtre du jeu */
